--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -21,8 +21,9 @@
   </head>
 
   <body>
-    <div class="container-fluid m-2">
+    <div class="container-fluid m-2 pt-2">
       <h1>Privacy Policy</h1>
+      <hr>
       <p>Last updated: December 30, 2021</p>
       <p>
         This Privacy Policy describes Our policies and procedures on the
@@ -41,15 +42,15 @@
           >Privacy Policy Template</a
         >.
       </p>
-      <h1>Interpretation and Definitions</h1>
-      <h2>Interpretation</h2>
+      <h2>Interpretation and Definitions</h2>
+      <h3>Interpretation</h3>
       <p>
         The words of which the initial letter is capitalized have meanings
         defined under the following conditions. The following definitions shall
         have the same meaning regardless of whether they appear in singular or
         in plural.
       </p>
-      <h2>Definitions</h2>
+      <h3>Definitions</h3>
       <p>For the purposes of this Privacy Policy:</p>
       <ul>
         <li>
@@ -128,9 +129,9 @@
           </p>
         </li>
       </ul>
-      <h1>Collecting and Using Your Personal Data</h1>
-      <h2>Types of Data Collected</h2>
-      <h3>Personal Data</h3>
+      <h2>Collecting and Using Your Personal Data</h2>
+      <h3>Types of Data Collected</h3>
+      <h4>Personal Data</h4>
       <p>
         While using Our Service, We may ask You to provide Us with certain
         personally identifiable information that can be used to contact or
@@ -140,7 +141,7 @@
       <ul>
         <li>Usage Data</li>
       </ul>
-      <h3>Usage Data</h3>
+      <h4>Usage Data</h4>
       <p>Usage Data is collected automatically when using the Service.</p>
       <p>
         Usage Data may include information such as Your Device's Internet
@@ -162,7 +163,7 @@
         visit our Service or when You access the Service by or through a mobile
         device.
       </p>
-      <h3>Tracking Technologies and Cookies</h3>
+      <h4>Tracking Technologies and Cookies</h4>
       <p>
         We use Cookies and similar tracking technologies to track the activity
         on Our Service and store certain information. Tracking technologies used
@@ -259,7 +260,7 @@
         cookies, please visit our Cookies Policy or the Cookies section of our
         Privacy Policy.
       </p>
-      <h2>Use of Your Personal Data</h2>
+      <h3>Use of Your Personal Data</h3>
       <p>The Company may use Personal Data for the following purposes:</p>
       <ul>
         <li>
@@ -366,7 +367,7 @@
           information for any other purpose with Your consent.
         </li>
       </ul>
-      <h2>Retention of Your Personal Data</h2>
+      <h3>Retention of Your Personal Data</h3>
       <p>
         The Company will retain Your Personal Data only for as long as is
         necessary for the purposes set out in this Privacy Policy. We will
@@ -382,7 +383,7 @@
         functionality of Our Service, or We are legally obligated to retain this
         data for longer time periods.
       </p>
-      <h2>Transfer of Your Personal Data</h2>
+      <h3>Transfer of Your Personal Data</h3>
       <p>
         Your information, including Personal Data, is processed at the Company's
         operating offices and in any other places where the parties involved in
@@ -402,21 +403,21 @@
         a country unless there are adequate controls in place including the
         security of Your data and other personal information.
       </p>
-      <h2>Disclosure of Your Personal Data</h2>
-      <h3>Business Transactions</h3>
+      <h3>Disclosure of Your Personal Data</h3>
+      <h4>Business Transactions</h4>
       <p>
         If the Company is involved in a merger, acquisition or asset sale, Your
         Personal Data may be transferred. We will provide notice before Your
         Personal Data is transferred and becomes subject to a different Privacy
         Policy.
       </p>
-      <h3>Law enforcement</h3>
+      <h4>Law enforcement</h4>
       <p>
         Under certain circumstances, the Company may be required to disclose
         Your Personal Data if required to do so by law or in response to valid
         requests by public authorities (e.g. a court or a government agency).
       </p>
-      <h3>Other legal requirements</h3>
+      <h4>Other legal requirements</h4>
       <p>
         The Company may disclose Your Personal Data in the good faith belief
         that such action is necessary to:
@@ -433,7 +434,7 @@
         </li>
         <li>Protect against legal liability</li>
       </ul>
-      <h2>Security of Your Personal Data</h2>
+      <h3>Security of Your Personal Data</h3>
       <p>
         The security of Your Personal Data is important to Us, but remember that
         no method of transmission over the Internet, or method of electronic
@@ -441,7 +442,7 @@
         means to protect Your Personal Data, We cannot guarantee its absolute
         security.
       </p>
-      <h1>Children's Privacy</h1>
+      <h2>Children's Privacy</h2>
       <p>
         Our Service does not address anyone under the age of 13. We do not
         knowingly collect personally identifiable information from anyone under
@@ -457,7 +458,7 @@
         require Your parent's consent before We collect and use that
         information.
       </p>
-      <h1>Links to Other Websites</h1>
+      <h2>Links to Other Websites</h2>
       <p>
         Our Service may contain links to other websites that are not operated by
         Us. If You click on a third party link, You will be directed to that
@@ -468,7 +469,7 @@
         We have no control over and assume no responsibility for the content,
         privacy policies or practices of any third party sites or services.
       </p>
-      <h1>Changes to this Privacy Policy</h1>
+      <h2>Changes to this Privacy Policy</h2>
       <p>
         We may update Our Privacy Policy from time to time. We will notify You
         of any changes by posting the new Privacy Policy on this page.
@@ -483,10 +484,10 @@
         changes. Changes to this Privacy Policy are effective when they are
         posted on this page.
       </p>
-      <h1>Contact Us</h1>
+      <h2>Contact Us</h2>
       <p>
         If you have any questions about this Privacy Policy, You can contact us
-        by email: rutuparn.17U253@viit.ac.in
+        by email: rutuparn.pawar@outlook.com
       </p>
     </div>
     <script
