Fix copyright text location

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             of misuse of this website for activities not permitted by law in the users country</h5>
     </div>
 
-    <div class="container-fluid mt-2">
+    <div class="container-fluid mt-2 pb-1">
         <div class="row pt-2">
             <div id="copyright-1" class="col-md-6">
                 <label class="h6">
@@ -248,10 +248,10 @@
                     <a href="privacy-policy.html"> Privacy Policy </a>
                 </label>
             </div>
-            <div id="copyright-2" class="col-md-6">
-                <label class="h6 text-right">Copyright © 2021 InputBlackBoxOutput</label>
+            <div id="copyright-2" class="text-right col-md-6">
+                <label class="h6">Copyright © 2022 InputBlackBoxOutput</label>
             </div>
-            <hr>
+
             <script>
                 if (
                     screen.width < 500 ||
@@ -261,7 +261,7 @@
                     navigator.userAgent.match(/iPod/i)
                 ) {
                     document.getElementById("copyright-1").innerHTML = '<h6 class="text-center"> <a href="terms-and-conditions.html">Terms & Conditions</a> | <a href="privacy-policy.html"> Privacy Policy </a> </h6>';
-                    document.getElementById("copyright-2").innerHTML = '<h6 class="text-center">Copyright © 2021 InputBlackBoxOutput</h6>';
+                    document.getElementById("copyright-2").innerHTML = '<h6 class="text-center">Copyright © 2022 InputBlackBoxOutput</h6>';
                 }
             </script>
         </div>
