--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
         <a class="navbar-brand" href="https://image-steganographer.netlify.app/">
             <label class="h3">Image Steganographer</label>
         </a>
-        <div class="navbar-collapse">
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
                 <label class="btn rounded btn-secondary mr-1 mb-0 mt-1" data-toggle="modal" data-target="#helpModal">
                     Help </label>
