--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style="scroll-behavior: smooth;">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
@@ -13,20 +13,7 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-
-    <style>
-        body {
-            background-color: grey;
-        }
-
-        .container-fluid {
-            background-color: white;
-        }
-
-        a {
-            color: #006EE5;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
 </head>
 
 <body>
@@ -52,20 +39,19 @@
 
     <div id="main" class="container-fluid my-2 py-3">
         <label class="h2"> Embedder </label>
-        <hr>
+        <hr />
         <div class="row m-2 mt-3">
             <div class="col mt-3">
                 <div class="row d-flex justify-content-center">
-                    <img id="img" style="border: 2px #AFAFAF solid" class="img-fluid" height="300" width="300"
-                        src="img/blank.png" alt="Upload an image">
+                    <img id="img" class="img-fluid" height="300" width="300" src="img/blank.png" alt="Upload an image">
                 </div>
                 <div class="row mt-2 d-flex justify-content-center">
-                    <button id="embed-open" type="button" class="btn btn-primary btn-lg m-2" style="width: 14rem">
+                    <button id="embed-open" type="button" class="btn btn-primary btn-lg m-2">
                         Upload
                     </button>
-                    <button id="rand-open" type="button" class="btn btn-primary btn-lg m-2" style="width: 14rem;"> Use a
-                        random image </button>
-                    <!-- <button id="open-one" type="button" class="btn btn-primary btn-lg m-2" style="width: 15rem"> Upload </button>-->
+                    <button id="rand-open" type="button" class="btn btn-primary btn-lg m-2">
+                        Use a random image
+                    </button>
                 </div>
             </div>
             <div class="col mt-3">
@@ -77,8 +63,8 @@
 
                     <div class="row form-group ml-1">
                         <label>Message</label>
-                        <textarea class="form-control" id="embed-message" rows="3" placeholder="Enter message"
-                            style="resize: none;"></textarea>
+                        <textarea class="form-control" id="embed-message" rows="3"
+                            placeholder="Enter message"></textarea>
                     </div>
                     <div class="row ml-2">
                         <label>
@@ -105,15 +91,15 @@
 
     <div class="container-fluid my-2 py-3">
         <label class="h2"> Extractor </label>
-        <hr>
+        <hr />
         <div class="row m-2">
             <div class="col mt-3">
                 <div class="row d-flex justify-content-center">
-                    <img id="img-text" style="border: 2px #AFAFAF solid" class="img-fluid" height="300" width="300"
-                        src="img/blank.png" alt="Upload an image">
+                    <img id="img-text" class="img-fluid" height="300" width="300" src="img/blank.png"
+                        alt="Upload an image">
                 </div>
                 <div class="row mt-2 d-flex justify-content-center">
-                    <button id="extract-open" type="button" class="btn btn-primary btn-lg m-2" style="width: 15rem">
+                    <button id="extract-open" type="button" class="btn btn-primary btn-lg m-2">
                         Upload
                     </button>
                 </div>
@@ -130,7 +116,8 @@
                         <button id="extract-reset" type="button" class="btn ml-2 btn-danger btn-lg "> Reset </button>
                     </div>
 
-                    <hr>
+                    <br />
+                    <hr />
                     <div class="row ml-2">
                         <label class="h5" id="extract-output"> Extracted text </label>
                     </div>
@@ -138,7 +125,7 @@
                         <button id="download-text" type="button" class="btn btn-success btn-lg "> Download message
                         </button>
                     </div>
-                    <hr>
+                    <hr />
                 </form>
                 <div class="mt-2">
                     <div id="extract-msg" class="alert alert-danger" role="alert">
@@ -150,18 +137,21 @@
         </div>
     </div>
     <div class="container-fluid my-2 py-3">
-        <hr>
+        <hr />
         <div class="row mx-2">
             <div class="col px-5">
                 <div class="row d-flex justify-content-center text-center">
-                    <label class="h5 text-center">FYI: This cat can hold more than just the Tesseract.</label>
+                    <label class="h5 text-center">
+                        FYI: This cat can hold more than just the Tesseract.
+                    </label>
                 </div>
                 <div class="row d-flex justify-content-center">
                     <img src="img/goose.jpg" alt="Captian marvel's cat">
                 </div>
                 <div class="row d-flex justify-content-center text-center">
                     <a href="#main">
-                        <label id="goose" class="h6 text-center" style="text-decoration: underline;"> Use this image
+                        <label id="goose" class="h6 text-center use-this-image">
+                            Use this image
                         </label>
                     </a>
                 </div>
@@ -169,26 +159,29 @@
 
             <div class="col px-5">
                 <div class="row d-flex justify-content-center text-center">
-                    <label class="h5 text-center">Area 51 can hold a lot of secrets, add in your own.</label>
+                    <label class="h5 text-center">
+                        Area 51 can hold a lot of secrets, add in your own.
+                    </label>
                 </div>
                 <div class="row d-flex justify-content-center">
                     <img src="img/area51.jpg" alt="Area 51">
                 </div>
                 <div class="row d-flex justify-content-center text-center">
                     <a href="#main">
-                        <label id="area51" class="h6 text-center" style="text-decoration: underline;"> Use this image
+                        <label id="area51" class="h6 text-center use-this-image">
+                            Use this image
                         </label>
                     </a>
                 </div>
             </div>
         </div>
-        <hr>
+        <hr />
     </div>
 
 
     <div class="container-fluid my-2 py-3">
         <h2>🤔 Wondering how it works? </h2>
-        <hr>
+        <hr />
 
         <p class="text-justify"> This is an application of <b> Steganography</b>. Steganography is the practice of
             concealing a file,
@@ -231,16 +224,7 @@
             <img class="img-fluid" src="img/flow.png" alt="Proces Flow">
         </div>
 
-        <!-- <a href="#main"> <label class="h2" style="text-decoration: underline;">Try it out now!</label> </a> -->
-        <hr>
-        <style type="text/css">
-            #disclaimer {
-                color: #FF2020;
-                border: 2px #FF4A4A solid;
-                border-radius: 10px;
-                padding: 10px;
-            }
-        </style>
+        <hr />
         <h5 id="disclaimer" class="text-justify"> <b>Legal Disclaimer:</b> The creator/s of this website cannot be held
             responsible in case
             of misuse of this website for activities not permitted by law in the users country</h5>
@@ -250,8 +234,8 @@
         <div class="row pt-2">
             <div id="copyright-1" class="col-md-6">
                 <label class="h6">
-                    <a href="terms-and-conditions.html">Terms & Conditions</a> |
-                    <a href="privacy-policy.html"> Privacy Policy </a>
+                    <a href="legal/terms-and-conditions.html">Terms & Conditions</a> |
+                    <a href="legal/privacy-policy.html"> Privacy Policy </a>
                 </label>
             </div>
             <div id="copyright-2" class="text-right col-md-6">
@@ -260,7 +244,6 @@
 
             <script>
                 if (
-                    screen.width < 500 ||
                     navigator.userAgent.match(/Android/i) ||
                     navigator.userAgent.match(/webOS/i) ||
                     navigator.userAgent.match(/iPhone/i) ||
@@ -345,10 +328,10 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
 
-    <script type="text/javascript" src="script/cipher.js"></script>
-    <script type="text/javascript" src="script/embed.js"></script>
-    <script type="text/javascript" src="script/extract.js"></script>
-    <script type="text/javascript" src="script/index.js"></script>
+    <script type="text/javascript" src="scripts/cipher.js"></script>
+    <script type="text/javascript" src="scripts/embed.js"></script>
+    <script type="text/javascript" src="scripts/extract.js"></script>
+    <script type="text/javascript" src="scripts/index.js"></script>
 
 
 </body>
